# polyglotir

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
examples/: case10_multi_turn.json  case10b_multi_turn.json  case10c_multi_turn.json  case1_multi_constraint.json  case1b_multi_constraint.json  case1c_multi_constraint.json  case2_negation.json  case2b_negation.json  case2c_negation.json  case3_detail.json  case3b_detail.json  case3c_detail.json  case5_tool_branch.json  case5b_tool_branch.json  case5c_tool_branch.json  case6_nested_constraint.json  case6b_nested_constraint.json  case6c_nested_constraint.json  case7_parallel_action.json  case7b_parallel_action.json  case7c_parallel_action.json  case8_conditional_branch.json  case8b_conditional_branch.json  case8c_conditional_branch.json  case9_tool_call.json  case9b_tool_call.json  case9c_tool_call.json
ietf-draft/: draft-01-to-02.diff  draft-hwang-silp-protocol-00.html  draft-hwang-silp-protocol-00.txt  draft-hwang-silp-protocol-00.xml  draft-hwang-silp-protocol-01.html  draft-hwang-silp-protocol-01.txt  draft-hwang-silp-protocol-01.xml  draft-hwang-silp-protocol-02.html  draft-hwang-silp-protocol-02.txt  draft-hwang-silp-protocol-02.xml  draft-hwang-silp-protocol-03.html  draft-hwang-silp-protocol-03.txt  draft-hwang-silp-protocol-03.xml
latex/: main.tex  main_body.tex  references.bib
scripts/: _ablation_full.py  _ablation_stats.py  _check_figures.py  _check_figures_detail.py  _check_heartbeat_all.py  _check_heartbeat_data.py  _check_spearman.py  _compare_phases.py  (+25 more)
(+75 files in other folders)
